# server/router/authenticationRouter.js
@@ -7,8 +7,8 @@ const authenticationRouter = express.Router()
 authenticationRouter
   .post('/signup', controller.SignUp)
   .post('/signin', controller.SignIn)
-  .post('/verify', JWTAuthentication, controller.Verify)
-  .get('/verify', JWTAuthentication, controller.VerifyCheck)
+  .post('/verify/text', JWTAuthentication, controller.VerifyText)
+  .get('/verify/text', JWTAuthentication, controller.VerifyTextCheck)
   .post('/forgot', controller.Forgot)
   .get('/reset', controller.ResetPage)
   .post('/reset', controller.Reset)
